fix card header/footer missing border

--- a/doc/_static/style.css
+++ b/doc/_static/style.css
@@ -183,11 +183,11 @@ div.card {
     box-shadow: 1px 1px 1px var(--pst-color-shadow);
 }
 .sd-card-header {
-    border-bottom-color: var(--pst-color-border-rgba) !important;
+    border-bottom: 1px solid var(--pst-color-border-rgba) !important;
     background-color: var(--pst-color-background-rgba) !important;
 }
 .sd-card-footer {
-    border-top-color: var(--pst-color-border-rgba) !important;
+    border-top: 1px solid var(--pst-color-border-rgba) !important;
     background-color: var(--pst-color-background-rgba) !important;
 }
 p.btn a {
